[gd_scene load_steps=6 format=3 uid="uid://6ocajxoqwimp"]

[ext_resource type="PackedScene" path="res://src/scenes/menu/shared/MenuBase.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bljxq7bljmtaa" path="res://src/scenes/menu/shared/Header.tscn" id="2"]
[ext_resource type="Script" path="res://src/shared/gui/SelectOption.gd" id="3"]
[ext_resource type="Script" path="res://src/shared/gui/Select.gd" id="4"]
[ext_resource type="Script" path="res://src/scenes/menu/options/General.gd" id="5"]

[node name="General" instance=ExtResource("1")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5")
font_size_increment = 1
focus_node_path = NodePath("CenterContainer/VBoxContainer/MainContainer/VBoxContainer/Languages")

[node name="CenterContainer" parent="." index="0"]
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" parent="CenterContainer" index="0"]
layout_mode = 2

[node name="MainContainer" parent="CenterContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="General" parent="CenterContainer/VBoxContainer/MainContainer" index="0" instance=ExtResource("2")]
layout_mode = 2
text = "GENERAL"

[node name="VBoxContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/MainContainer" index="1"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "LANGUAGE"

[node name="Languages" type="OptionButton" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer" index="1"]
layout_mode = 2
script = ExtResource("4")

[node name="EN" type="Node" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer/Languages" index="1"]
script = ExtResource("3")
text = "LANG_EN"

[node name="JA" type="Node" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer/Languages" index="2"]
script = ExtResource("3")
text = "LANG_JA"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer" index="2"]
visible = false
layout_mode = 2
text = "FONT_SIZE"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer" index="3"]
visible = false
layout_mode = 2

[node name="DecreaseFont" type="Button" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
text = "-"

[node name="Font" type="Label" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
text = "PLACEHOLDER"

[node name="IncreaseFont" type="Button" parent="CenterContainer/VBoxContainer/MainContainer/VBoxContainer/HBoxContainer" index="2"]
layout_mode = 2
text = "+"

[node name="Back" parent="CenterContainer/VBoxContainer" index="1"]
layout_mode = 2

[connection signal="item_selected" from="CenterContainer/VBoxContainer/MainContainer/VBoxContainer/Languages" to="." method="_on_Languages_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainContainer/VBoxContainer/HBoxContainer/DecreaseFont" to="." method="_on_DecreaseFont_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainContainer/VBoxContainer/HBoxContainer/IncreaseFont" to="." method="_on_IncreaseFont_pressed"]
